--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,8 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer class="footer">
+  <small class="copyright"
+    >© marcjnn 2021 @
+    <a href="https://adalab.es/" class="footer__link" title="ir a adalab.es"
+      >Adalab</a
+    ></small
+  >
 </footer>
