create basic structure

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,3 +1,14 @@
 <main class="main">
-  <p>A mouse took a stroll through the deep dark wood</p>
+  <form action="" method="GET" class="main__form">
+    <!-- <label for="search"></label> -->
+    <input type="text" placeholder="search" />
+    <button>search</button>
+  </form>
+  <section>
+    <h2>Your favourite series</h2>
+    <ul>
+      <li>(here will go fav results)</li>
+    </ul>
+  </section>
+  <section><h2>Results</h2></section>
 </main>
