implement render search resaults list

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,8 +1,8 @@
 <main class="main">
   <form action="" method="GET" class="main__form">
     <!-- <label for="search"></label> -->
-    <input type="text" placeholder="search" />
-    <button>search</button>
+    <input type="text" placeholder="search" class="js-search-input" />
+    <button class="js-search-btn">search</button>
   </form>
   <section>
     <h2>Your favourite series</h2>
@@ -10,5 +10,8 @@
       <li>(here will go fav results)</li>
     </ul>
   </section>
-  <section><h2>Results</h2></section>
+  <section>
+    <h2>Results</h2>
+    <ul class="js-search-results"></ul>
+  </section>
 </main>
