implement render favourite shows

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -5,10 +5,8 @@
     <button class="js-search-btn">search</button>
   </form>
   <section>
-    <h2>Your favourite series</h2>
-    <ul>
-      <li>(here will go fav results)</li>
-    </ul>
+    <h2>Your favourite shows</h2>
+    <ul class="js-favorite-shows"></ul>
   </section>
   <section>
     <h2>Results</h2>
