--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,6 +7,7 @@
   <section>
     <h2>Your favourite shows</h2>
     <ul class="js-favorite-shows"></ul>
+    <button class="js-fav-reset-btn">clear all</button>
   </section>
   <section>
     <h2>Results</h2>
