add different classes depending on the fav/not fav property

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -10,6 +10,17 @@
   }
 }
 
+// create mixin for shared part between two cards
+.result {
+  &__card {
+    background-color: thistle;
+    &--fav {
+      background-color: teal;
+      color: whitesmoke;
+    }
+  }
+}
+
 .favourite {
   &__card {
     display: flex;
