add grid-based layout

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -4,13 +4,12 @@
     <input type="text" placeholder="search" class="js-search-input" />
     <button class="js-search-btn">search</button>
   </form>
-  <section>
+  <section class="favorites">
     <h2>Your favourite shows</h2>
     <ul class="js-favorite-shows"></ul>
     <button class="js-fav-reset-btn">clear all</button>
   </section>
-  <section>
-    <h2>Results</h2>
-    <ul class="js-search-results"></ul>
+  <section class="results">
+    <ul class="results__list js-search-results"></ul>
   </section>
 </main>
