--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,5 +3,8 @@
 @import "layout/page";
 @import "layout/header";
 @import "layout/main";
+@import "layout/form";
+@import "layout/favorites";
+@import "layout/results";
 @import "layout/footer";
 @import "pages/index";
