--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,6 +1,6 @@
 .page {
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
+  padding: 12px;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   height: 100vh;
 }
