--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -5,7 +5,7 @@
     <button class="js-search-btn">search</button>
   </form>
   <section class="favorites">
-    <h2>Your favourite shows</h2>
+    <h2 class="favorites__title">Your favourite shows</h2>
     <ul class="js-favorite-shows"></ul>
     <button class="js-fav-reset-btn">clear all</button>
   </section>
