fix partials error

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <include src="./partials/form.html"></include>
-  <include src="./partials/favorites.html"></include>
-  <include src="./partials/searchresults.html"></include>
+  <include src="./form.html"></include>
+  <include src="./favorites.html"></include>
+  <include src="./searchresults.html"></include>
 </main>
