style search form

--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -1,5 +1,5 @@
 <form action="" method="GET" class="main__form">
   <!-- <label for="search"></label> -->
-  <input type="text" placeholder="search" class="js-search-input" />
-  <button class="js-search-btn">search</button>
+  <input type="text" placeholder="search" class="form__input js-search-input" />
+  <button class="form__button js-search-btn">search</button>
 </form>
