--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,6 +3,7 @@ $fontMain: "Open Sans", sans-serif;
 $fontTitle: "Montserrat", sans-serif;
 
 // colors
+$colorDark: rgb(17, 91, 117);
+$colorLight: rgb(62, 192, 237);
 
 // others
-$pageGap: 20px;
