--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,12 +1,8 @@
 .main {
-  margin-top: 15px;
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     "search search"
     "favorites results";
-  &__form {
-    width: 100%;
-  }
 }
