--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,3 +1,36 @@
 .main__form {
+  padding: 12px 0;
+  width: 100%;
   grid-area: search;
+}
+
+.form {
+  &__input {
+    margin-right: 20px;
+    padding: 5px;
+    outline: none;
+    font-family: $fontMain;
+    border: 2px solid $colorDark;
+    border-radius: 2px;
+    background-color: white;
+    &::placeholder {
+      color: $colorLight;
+      font-weight: 300;
+    }
+  }
+  &__button {
+    padding: 5px 16px;
+    outline: none;
+    font-family: $fontMain;
+    font-weight: 600;
+    border-radius: 12px;
+    border: 2px solid $colorDark;
+    color: $colorDark;
+    background-color: $colorLight;
+    &:active {
+      border-color: $colorLight;
+      color: $colorLight;
+      background-color: white;
+    }
+  }
 }
