style favorite show cards

--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,5 +1,5 @@
 <section class="favorites">
   <h2 class="favorites__title">Your favourite shows</h2>
-  <ul class="js-favorite-shows"></ul>
+  <ul class="favorites__shows js-favorite-shows"></ul>
   <button class="js-fav-reset-btn">clear all</button>
 </section>
