--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,5 +5,6 @@ $fontTitle: "Montserrat", sans-serif;
 // colors
 $colorDark: rgb(17, 91, 117);
 $colorLight: rgb(62, 192, 237);
+$colorSun: rgb(231, 167, 30);
 
 // others
