--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -14,7 +14,7 @@
     border-radius: 2px;
     background-color: white;
     &::placeholder {
-      color: $colorLight;
+      color: $colorSun;
       font-weight: 300;
     }
   }
