style clear all button

--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,5 +1,10 @@
 <section class="favorites">
   <h2 class="favorites__title">Your favourite shows</h2>
   <ul class="favorites__shows js-favorite-shows"></ul>
-  <button class="js-fav-reset-btn">clear all</button>
+  <button
+    class="favoriteCard__btn--reset js-fav-reset-btn"
+    title="remove all from favorites"
+  >
+    clear all
+  </button>
 </section>
