update color scheme

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,6 +5,7 @@ $fontTitle: "Montserrat", sans-serif;
 // colors
 $colorDark: rgb(17, 91, 117);
 $colorLight: rgb(62, 192, 237);
-$colorSun: rgb(231, 167, 30);
+$colorBackgroundFav: rgb(231, 167, 30);
+$colorBackground: rgb(211, 140, 106);
 
 // others
