style search results

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,3 @@
 <header class="header">
-  <h1 class="header__title">Browse series</h1>
+  <h1 class="header__title">Ultimate series browser</h1>
 </header>
