--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,7 +1,14 @@
 <footer class="footer">
   <small class="copyright"
-    >© marcjnn 2021 @
-    <a href="https://adalab.es/" class="footer__link" title="ir a adalab.es"
+    >©
+    <a
+      href="https://github.com/marcjnn"
+      title="check github profile"
+      class="footer__link"
+      >marcjnn</a
+    >
+    2021 @
+    <a href="https://adalab.es/" class="footer__link" title="go to adalab.es"
       >Adalab</a
     ></small
   >
