implement favorite list visibility

--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,4 +1,4 @@
-<section class="favorites">
+<section class="favorites favorites--hidden js-favorites">
   <h2 class="favorites__title">Your favourite shows</h2>
   <ul class="favorites__shows js-favorite-shows"></ul>
   <button
