--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -1,4 +1,4 @@
-<form action="" method="GET" class="main__form">
+<form action="" method="GET" class="main__form js-form">
   <!-- <label for="search"></label> -->
   <input type="text" placeholder="search" class="form__input js-search-input" />
   <button class="form__button js-search-btn">search</button>
