--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -15,7 +15,7 @@
 }
 
 @mixin result-card($color, $bgrColor) {
-  padding: 16px 0;
+  padding: 16px 8px;
   border: 2px solid $color;
   background-color: $bgrColor;
   border-radius: 8px;
