exercises during interview

--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -2,4 +2,5 @@
   <!-- <label for="search"></label> -->
   <input type="text" placeholder="search" class="form__input js-search-input" />
   <button class="form__button js-search-btn">search</button>
+  <button class="form__button js-log-btn">LOG</button>
 </form>
